--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="col-sm">
              
             <div class="card h-100">
-                <img src="images/bishop katuram.JPG" class="card-img-top "  height="1300px" alt="The PrincipalWestville High School " data-aos="zoom-in" data-aos-duration="5000"   data-aos-once="false" loading="lazy">
+                <img src="images/director.jpg" class="card-img-top "  height="1300px" alt="The PrincipalWestville High School " data-aos="zoom-in" data-aos-duration="5000"   data-aos-once="false" loading="lazy">
                 <div class="card-body">
                     <h5 class="card-title fw-bold">Our Director</h5>
                     <p class="card-text">"As the Director of Westville High School, I am thrilled to welcome you to our vibrant learning community. At Westville, we believe that education is a shared journey, one that reaches its fullest potential when schools and families work hand-in-hand...."</p>
