--- a/management.html
+++ b/management.html
@@ -80,7 +80,7 @@
     <div class="row row-cols-1  row-cols-xs-1 row-cols-sm-1 row-cols-md-1 row-cols-lg-2 justify-content-center g-3">
         <div class="col">
         <h2 class="text-danger">Our Director</h2> 
-            <img src="images/bishop katuram.JPG" class="rounded" width="304" height="280" loading="lazy">
+            <img src="images/director.jpg" class="rounded" width="304" height="280" loading="lazy">
             <p>Mr.Jimmy Katuram is our director at Westville-High-School</p>
         </div>
     <div class="col">
