--- a/index.html
+++ b/index.html
@@ -185,16 +185,15 @@
     <div class="row gy-4">
         <h3 class="">Our Administrators</h3>
         <div class="col-sm">
-           <div class="col-sm">
+             
             <div class="card h-100">
-                <img src="images/HM wvhs.jpg" class="card-img-top" alt="The deputy  Principal (admin)Westville High School " data-aos="zoom-in" data-aos-duration="5000"   data-aos-once="false" loading="lazy">
+                <img src="images/director.jpg" class="card-img-top "  height="1300px" alt="The PrincipalWestville High School " data-aos="zoom-in" data-aos-duration="5000"   data-aos-once="false" loading="lazy">
                 <div class="card-body">
-                    <h5 class="card-title fw-bold">The Head teacher</h5>
-                    <p class="card-text">"Good performance and discipline is the work of Teachers, Parents, Support staff, students’ council and the entire student body. Well structured daily routine and clear school policies add value to the school’s mission and vision..."</p>
+                    <h5 class="card-title fw-bold">Our Director</h5>
+                    <p class="card-text">"As the Director of Westville High School, I am thrilled to welcome you to our vibrant learning community. At Westville, we believe that education is a shared journey, one that reaches its fullest potential when schools and families work hand-in-hand...."</p>
                     <a href="management.html" class="btn btn-primary">Read More</a>
                 </div>
             </div>
-        </div>
         </div>
         <div class="col-sm">
             <div class="card h-100">
